--- a/source/index.html
+++ b/source/index.html
@@ -80,13 +80,13 @@
       <option value=""></option>
     </select>
     <button class="main-nav__burger-toggle" type="button"></button>
-    <button class="main-nav__toggle" type="button">Войти</button>
-    <button class="main-nav__toggle" type="button">Регистрация</button>
+    <button class="page-header__button" type="button">Войти</button>
+    <button class="page-header__button" type="button">Регистрация</button>
   </header>
 
   <main class="main container">
     <div class="main-wrapper">
-      <img src="img/index1-png.png" alt="Контейнеровоз" width="981" height="1000">
+      <img src="img/index1-png.png" class="main-img" alt="Контейнеровоз" width="981" height="1000">
       <div class="main-actions">
         <form action="#" class="main-actions__form" method="get">
           <h2 class="main-caption">Отследить мою посылку</h2>
