--- a/source/index.html
+++ b/source/index.html
@@ -42,7 +42,7 @@
             </a>
           </li>
           <li class="main-nav__list-item">
-            <a class="main-nav__link" href="form.html">
+            <a class="main-nav__link" href="courier-call-page.html">
               Вызов курьера
             </a>
           </li>
